# hacker-news-proxy

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml
proxy/: app.py  headers_modifier.py  html_modifier.py  messages.py  settings.py  url_modifier.py
tests/proxy/: conftest.py  test_app.py  test_headers_modifier.py  test_html_modifier.py  test_url_modifier.py
tests/proxy/fixtures/: __init__.py  fixtures.py
