[project]
name = "ivelum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pook>=2.1.4",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
